--- a/inst/rmarkdown/templates/reports/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/reports/skeleton/skeleton.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "Weekly Web Monitoring Report"
-author: "NESREA Web Monitoring Group"
+title: "Weekly Web & Social Media Report"
+author: "Press Unit"
 output:
   word_document: default
 params:
   data: ""
 ---
+
 <style>
   body {
     text-align: justify
@@ -13,122 +14,142 @@ params:
 </style>                                                                  
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+pkgs <- c("dplyr", "ggplot2", "knitr", "lubridate")
+lapply(pkgs, function(P) 
+  suppressPackageStartupMessages(require(P, character.only = TRUE)))
+
+opts_chunk$set(echo = FALSE)
 ```
 
 ```{r initialize, message=FALSE, include=FALSE}
 reportPeriodText <- 
-  paste(format(lubridate::today() - 6, "%d %B"), "to", format(lubridate::today(), "%d %B %Y"))
+  paste(format(today() - 6, "%d %B"), "to", format(today(), "%d %B %Y"))
+
+## TODO: Implement month & year transitions
 ```
 
-# 1.0 Introduction
-This is the NESREA Web Monitoring Report for the period **`r reportPeriodText`**[^1].
+# Overview
+**Reporting Period:** `r reportPeriodText`.
 
-# 2.0 Summary Statistics
-The following tables provide an overview of activity on the Agency's respective platforms.  
+## Website
 
-## 2.1 NESREA Official Website
-```{r load website data}
-                        ############
-                        # Website  #
-                        ############
+```{r load all data}
 newsData <- params$data$webnews
+all_twts <- params$data$tweets
+all_fbs <- params$data$fbposts
+```
 
+```{r website}
 newsData$Date <- newsData$Date %>%
   as.Date(origin = "1970-01-01") %>%
   as.POSIXct()
 
 newsData <- newsData %>%
-  dplyr::mutate(Month = format(Date, "%B")) %>%
-  dplyr::mutate(Year = format(Date, "%Y"))
+  mutate(Month = format(Date, "%B")) %>%
+  mutate(Year = format(Date, "%Y"))
 
 ## make variables for monthly/annual data
-thisMth <- format(lubridate::today(), "%B")
-thisYr <- format(lubridate::today(), "%Y")
+thisMth <- format(today(), "%B")
+thisYr <- format(today(), "%Y")
 
 mth_news <- newsData %>%
-  dplyr::filter(Month == thisMth & Year == thisYr)
+  filter(Month == thisMth & Year == thisYr)
 wk_news <- newsData %>%
-  dplyr::filter(as.Date(Date) >= lubridate::today() - 7)
+  filter(as.Date(Date) >= today() - 7)
+
+## TODO: Draw plots reflecting activity trend. Roll over a one-year period.
 ```
 
-|     **Description**        |    **Result**                              |
-|----------------------------|--------------------------------------------|
-|News Stories (All-time)     |`r nrow(newsData)`                          |
-|News Stories in `r thisMth` |`r nrow(mth_news)`                          |
-|News Stories (last 7 days)  |`r nrow(wk_news)`                           |
-|Most recent News Story      |`r newsData$Title[which.max(newsData$Date)]`|
-|                            |                                            |
+| **News Stories** |    **Result**                                |
+|------------------|----------------------------------------------|
+| All-time         | `r nrow(newsData)`                           |
+| In `r thisMth`   | `r nrow(mth_news)`                           |
+| Last 7 days      | `r nrow(wk_news)`                            |
+| Most recent      | `r newsData$Title[which.max(newsData$Date)]` |
+|                  |                                              |
 
-## 2.2 Twitter
+
+## Twitter
 ```{r load twitter data, message=FALSE}
-                      ##############
-                      #  TWITTER   #
-                      ##############
+## Process tweets
+all_twts <- process_stored_tweets(all_twts)
 
-## Access stored tweets
-all_data <- params$data$tweets
-all_data <- process_stored_tweets(all_data)
+## Add a column of Date objects for easy categorisation. Also carry 
+## out a check to see whether the database needs to be updated.
+all_twts$date_only <- as.Date(all_twts$created)
 
-## Add a column of Date objects for easy categorisation. Also carry out a 
-## check to see whether the database needs to be updated.
-all_data$date_only <- as.Date(all_data$created)
-
-wk_data <- all_data %>%
-  dplyr::filter(date_only >= (lubridate::today() - 6) & date_only <= (lubridate::today())) %>%
-  dplyr::arrange(date_only) %>%
-  dplyr::mutate(day = weekdays(date_only, abbreviate = TRUE)) %>%
-  dplyr::mutate(Type = ifelse(isRetweet, "Retweet", "Original"))
+wk_data <- all_twts %>%
+  filter(date_only >= (today() - 6) & date_only <= (today())) %>%
+  arrange(date_only) %>%
+  mutate(day = weekdays(date_only, abbreviate = TRUE)) %>%
+  mutate(Type = ifelse(isRetweet, "Retweet", "Original"))
 wk_data$day <-  factor(wk_data$day,
                        levels = unique(wk_data$day),
                        ordered = TRUE)
   
-last_wk <- all_data %>%
-  dplyr::filter(date_only >= (lubridate::today() - 13) & date_only <= (lubridate::today() - 7))
+last_wk <- all_twts %>%
+  filter(date_only >= (today() - 13) & date_only <= (today() - 7))
 
-## Remove characters from the text of tweets that are not human-readable, as 
-## they would be of no practical use in the analysis.
+## Remove characters from the text of tweets that are not human-readable, 
+## as they would be of no practical use in the analysis.
 wk_data$text <- remove_nonreadables(wk_data$text)
 
-# Some objects to be used to generate and/or display statistics
+## Some objects to be used to generate and/or display statistics
 no.wk <- nrow(wk_data)
-month_begin <- lubridate::floor_date(lubridate::today(), "month")
-month_end <- lubridate::ceiling_date(lubridate::today(), "month")
-mth_data <- dplyr::filter(all_data, date_only >= month_begin & date_only <= month_end)
+month_begin <- floor_date(today(), "month")
+month_end <- ceiling_date(today(), "month")
+mth_data <- filter(all_twts, date_only >= month_begin & date_only <= month_end)
 mostRTed <- wk_data$text[which.max(wk_data$retweetCount)]
 mostFaved <- wk_data$text[which.max(wk_data$favoriteCount)]
-tweets_by_us <- dplyr::filter(wk_data, screenName == "NESREANigeria")
+tweets_by_us <- filter(wk_data, screenName == "NESREANigeria")
 busiest_day <- which.max(table(wk_data$date_only))
-busiest_day <- lubridate::ymd(names(busiest_day))
+busiest_day <- ymd(names(busiest_day))
 ```
 
-|     **Description**                      |    **Result**                  |
-|------------------------------------------|--------------------------------|
-|No. of tweets in `r format(lubridate::today(), "%B")`|`r nrow(mth_data)`              |
-|No. of tweets in last 7 days              |`r no.wk`                       |
-|Total tweets **by** NESREA                |`r nrow(tweets_by_us)`          |
-|Total tweets **mentioning** NESREA        |`r nrow(wk_data)`               |
-|Average number of tweets per day          |`r floor(nrow(wk_data)/7)`      |
-|Day of highest activity                   |`r format(busiest_day, "%d %B")`|
-|Most liked tweet                          |`r mostFaved`                   |
-|Most retweeted tweet                      |`r mostRTed`                    |
-|Comparative tweet volume (week-on-week)   |**`r no.wk - nrow(last_wk)`**   |
-|                                          |                                |
+```{r series-twitter}
+A <- "1970-01-01"
+thisWk <- as.numeric(format(today(), "%V"))
+
+twtsPerWeek <- all_twts %>% 
+  filter(as.Date(as.POSIXct(created, origin = A)) - today() <= 365) %>% 
+  mutate(week = as.numeric(format(as.POSIXct(created, origin = A), "%V"))) %>% 
+  group_by(week) %>% 
+  count() %>% 
+  as_tibble() %>% 
+  mutate(lag = abs(week - thisWk)) %>% 
+  arrange(lag)
+
+plot(ts(twtsPerWeek$n, start = 53 - thisWk), col = "blue", lwd = 2)
+
+```
+
+|     **Description**          |    **Result**                    |
+|------------------------------|----------------------------------|
+| In `r format(today(), "%B")` | `r nrow(mth_data)`               |
+| In last 7 days               | `r no.wk`                        |
+| Posts made                   | `r nrow(tweets_by_us)`           |
+| Mentions                     | `r nrow(wk_data)`                |
+| Daily average                | `r floor(nrow(wk_data)/7)`       |
+| Most active on               | `r format(busiest_day, "%d %B")` |
+| Most liked                   | `r mostFaved`                    |
+| Most retweeted               | `r mostRTed`                     |
+| Comparative activity         | **`r no.wk - nrow(last_wk)`**    |
+|                              |                                  |
 
 <!-- TODO: Add No. of followers (overall) & new followers (in last 7 days) -->
 
-## 2.3 Facebook
+## Facebook
 ```{r load-fb-data, message=FALSE}
                         ############
                         # Facebook #
                         ############
 ## Load data on Facebook Page posts from database;
 ## also do a little data wrangling
-fbPosts <- params$data$fbposts %>%
+fbPosts <- all_fbs %>%
   prepare_data(.) %>%
-  dplyr::select(message:shares_count) %>%
-  dplyr::mutate(created_mth = format(as.Date(created_time), "%B")) %>%
-  dplyr::mutate(created_yr = format(as.Date(created_time), "%Y"))
+  select(message:shares_count) %>%
+  mutate(created_mth = format(as.Date(created_time), "%B")) %>%
+  mutate(created_yr = format(as.Date(created_time), "%Y"))
 
 fbComments <- params$data$fbcomments
 fbLikes <- params$data$fblikes
@@ -146,9 +167,9 @@ fbPosts$created_mth <-
   factor(levels = month.name, ordered = TRUE)
 
 mth_Posts <- fbPosts %>%
-  dplyr::filter(created_mth == thisMth & created_yr == thisYr)
+  filter(created_mth == thisMth & created_yr == thisYr)
 wk_Posts <- mth_Posts %>%
-  dplyr::filter(created_time >= (lubridate::today() - 6))
+  filter(created_time >= (today() - 6))
 ```
 
 |     **Description**        |    **Result**                            |
@@ -163,41 +184,35 @@ wk_Posts <- mth_Posts %>%
 |Most Commented  (Overall)   |`r return_text(fbPosts, "comments_count")`|
 |                            |                                          |
 
-# 3.0 Exploratory Analysis
-**Methodology**: The data were harvested using R scripts[^2]. For the website, the text in the pages of interest were scraped as hypertext markup language (HTML) with particular portions of the page(s) identified via cascading style sheet (CSS) dplyr::selectors. For the social media platforms Facebook and Twitter, the data were downloaded via the respective platforms' application programming interface (API). All the downloaded data are stored together locally in a database. The analyses in this document (including visualizations) were also carried out using R.
+## Website 
 
-## 3.1 Website 
-Below is a tabulation of recent news items uploaded to the NESREA Official website:
 ```{r news summary, results='asis'}
-knitr::kable(head(newsData[, c(1, 4, 5)], n = 10L),
+kable(head(newsData[, c(1, 4, 5)], n = 10L),
              caption = "Table: Ten (10) Most Recently Uploaded News Stories")
 ```
 
-## 3.2 Twitter
-All tweets in this analysis are those containing the NESREA handle, [nesreanigeria](https://www.twitter.com/nesreanigeria). Firstly, they are displayed as a density distribution, where $p(AUC) = 1$ (for simplicity, the $y$-axis labels are not displayed).  
+## Twitter
+
 ```{r plain density, warning=FALSE, message=FALSE}
 simplePlot <- plain_dens_plot(data = wk_data, platform = "twitter")
 simplePlot +
-  ggplot2::theme(axis.text.y = ggplot2::element_blank(), axis.ticks.y = ggplot2::element_blank())
+  theme(axis.text.y = element_blank(), axis.ticks.y = element_blank())
 ```
 
-Below, is a representation of the previous plot, with the data disaggregated by days in order to display relative Twitter activity during the week under review.[^3]  
 ```{r daily tweets plot}  
 simplePlot +
-  ggplot2::facet_grid(day ~ .) +
-  ggplot2::theme(axis.text.y = ggplot2::element_blank(), axis.ticks.y = ggplot2::element_blank())
+  facet_grid(day ~ .) +
+  theme(axis.text.y = element_blank(), axis.ticks.y = element_blank())
 ```
 
-The tweets are then diaggregated by whether they are original tweets or retweets (retweets could be reflective of a trend or public interest in a particular tweet posted by another user).  
 ```{r disaggregated tweets density}
-ggplot2::ggplot(wk_data, ggplot2::aes(created)) +
-  ggplot2::geom_density(aes(fill = Type), alpha = .5) +
-  ggplot2::theme(legend.justification = c(1, 1), legend.position = c(1, 1)) +
-  ggplot2::ggtitle(paste("Distribution of tweets for", reportPeriodText)) +
-  ggplot2::xlab("Date")
+ggplot(wk_data, aes(created)) +
+  geom_density(aes(fill = Type), alpha = .5) +
+  theme(legend.justification = c(1, 1), legend.position = c(1, 1)) +
+  ggtitle(paste("Distribution of tweets for", reportPeriodText)) +
+  xlab("Date")
 ```
 
-For sentiment analysis, positive and negative words are displayed in Cleveland dot plots  
 ```{r twitter sentiments dotchart-1}
 spl <- split(wk_data, wk_data$isRetweet)
 origTwts <- spl[['FALSE']]
@@ -206,80 +221,44 @@ twPol <- compute_emotional_valence(origTwts$text)
 visualise_pol_diff(pol.list = twPol)
 ```
 
-
 ```{r twitter sentiment extremes}
 origTwts$emotionalValence <- sapply(twPol, function(x) x$all$polarity)
 ```
 
-The tweets on either side of the emotional spectrum are identified. This is done to place the outcome of the earlier computaion in proper perspective.
 
 * __Most positive tweet__: `r origTwts$text[which.max(origTwts$emotionalValence)]`
 * __Most negative tweet__: `r origTwts$text[which.min(origTwts$emotionalValence)]`  
 
-The main words associated with tweets found to be positive, neutral or negative (excluding those already plotted above) are displayed in a tag cloud. In this depiction, the size of a word is proportionate to the frequency of its occurence. These can be useful as keywords for carrying out a further, in-depth search.   
+ 
 ```{r, twitter wordcloud}
 generate_wordcloud(origTwts, twPol, site = "Twitter")
 ```
 
 ```{r network}
 ## TODO
-RT <- dplyr::mutate(spl[['TRUE']], sender = substr(text, 5, regexpr(':', text) - 1))
+RT <- mutate(spl[['TRUE']], sender = substr(text, 5, regexpr(':', text) - 1))
 ```
 
 
-## 3.3 Facebook
-Compared to Twitter, which has a characteristic high-volume activity, NESREA Facebook Page posts are few. Thus, we have drawn a Kernig density plot of **all** posts done by the Page's handlers.  
+## Facebook
+
 ```{r density dist: FB posts}
-ggplot2::ggplot(fbPosts, ggplot2::aes(created_time)) +
-  ggplot2::geom_density(fill = "purple", alpha = 0.6) +
-  ggplot2::ggtitle("Distribution of Facebook posts")
+ggplot(fbPosts, aes(created_time)) +
+  geom_density(fill = "purple", alpha = 0.6) +
+  ggtitle("Distribution of Facebook posts")
 ```
 
-Also, all comments made on NESREA's Facebook Page posts are displayed using a similar plotting method.  
+
 ```{r density dist: FB comments}
 plain_dens_plot(fbComments, platform = "facebook")
 ```
-
-As with the Twitter data, the positive and negative words on in comments on the NESREA Facebook Page are compared side-by-side using Cleveland dot plots.  
+ 
 ```{r fb polarities}
 fbPol <- compute_emotional_valence(text.var = fbComments$message)
 visualise_pol_diff(pol.list = fbPol)
 ```
-
-The tag cloud method is also used to present key words found in comments made by the Facebook community on the Agency's posts.  
+  
 ```{r facebook wordcloud}
 fbComments$emotionalValence <- sapply(fbPol, function(x) x$all$polarity)
 generate_wordcloud(fbComments, fbPol, site = "Facebook")
 ```
-
-# 4.0 Observations
-For the period under review, the following observations were made:  
-**Website:**
-
-
-**Twitter:**  
-
-
-**Facebook:**  
-
-# 5.0 Recommendations
-In the light of the above, we would like to make the following recommendations:  
-
-
-```{r signatories, echo=FALSE}
-victor <- person("Victor", "Ordu", email =  "victor.ordu@nesrea.gov.ng", comment = "Chairman Web Monitoring Group")
-remi <- person("Remi", "Agunbiade", email = "remi.agunbiade@nesrea.gov.ng", comment = "Member, Web Monitoring Group")
-amaka <- person("Amaka", "Ejiofor", email = "amaka.ejiofor@nesrea.gov.ng", comment = "Member, Web Monitoring Group")
-eze <- person("Ezechinyere", "Achilefu", email = "ezechinyere.achilefu@nesrea.gov.ng", comment = "Member, Web Monitoring Group")
-```
-
-Submitted by:
-
-
-**`r paste(victor$given, victor$family)`**  
-`r victor$comment`  
-
-  
-[^1]: The report was built using *R `r getRversion()`* on `r format(Sys.time(), "%A, %d %B %Y at %H:%M")`.
-[^2]: R is a programming language as well as an environment for statistical computing (<http://r-project.org>)
-[^3]: Note that days with no data are automatically dropped.
